# 1d2d

./: .eslintignore  .eslintrc.cjs  .gitignore  README.md  ignore.md  index.html  overview.md  package-lock.json  package.json  part1.md  part2.md  tsconfig.baseline.json  tsconfig.cli.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tests.json  tsconfig.tsbuildinfo  vite.config.ts
baseline/: README.md
dist-cli/: kuramotoCore.js
docs/: dev-onboarding.md  hyperbolic-atlas.md  phase0_baseline.md  phase0_checklist.md  phase0_inventory.md  phase1-foundation.md  phase11_performance_hardening.md  phase12_launch_preparation.md  phase6_validation_rollout.md  phase8_dev_ops.md  su7-gpu-metrics.md
examples/: README.md
public/: sample-manifest.json
rainbow-frames-2025-10-11T08-37-20-576Z/: README.txt  metadata.json
scripts/: checkBaseline.ts  runBaseline.ts  runCrossTierValidation.ts  updateCrossTierBaseline.ts  videoPipeline.ts  videoUtils.ts
sdk/python/: README.md  pyproject.toml
sdk/python/indra_sdk/: __init__.py  client.py
src/: App.tsx  gpuRenderer.ts  kuramotoCore.ts  kuramotoWorker.ts  main.tsx  styles.css  volumeStub.ts
tests/: accessibility.test.tsx  crossTierValidation.test.ts  fieldContracts.test.ts  hyperbolicAtlas.test.ts  hyperbolicFlowEnhancements.test.ts  kernelHub.test.ts  kernelSpec.test.ts  kuramotoAngular.test.ts  kuramotoCoupling.test.ts  manifestLoader.test.ts  mediaPipeline.test.ts  node-test.d.ts  offlineRenderer.test.ts  opticalField.test.ts  parallaxMotionEnergy.test.ts  performanceWatchdog.test.ts  (+27 more)
(+140 files in other folders)
